fix nav on mobile

--- a/_themes/BasketLummen/css/theme.css
+++ b/_themes/BasketLummen/css/theme.css
@@ -123,6 +123,13 @@ input[type=submit]{
     border-top-color: #000;
     border-bottom-color: #000;
 }
+@media (max-width: 767px){
+	.caret{
+		margin-top:5px;
+		float: right;
+	}	
+}
+
 /* mobile version */
 .navbar-default .navbar-toggle {
     border-color: #fff;
@@ -140,7 +147,13 @@ input[type=submit]{
     background-color: #14225C;
 }
 @media (max-width: 767px) {
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+	.navbar-default .navbar-nav > li {
+		border-bottom: 1px solid #eee;
+	}
+	.navbar-default .navbar-nav:last-child > li:last-child{
+		border-bottom: none;
+	}
+    .navbar-default .navbar-nav .open > li > a {
         color: #000;
     }
     .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
@@ -148,20 +161,74 @@ input[type=submit]{
         color: #000;
     }
 }
-
  @media (max-width: 767px) {
 	.navbar-collapse{	
 		background-color: #fff;
 	}
 }
 
-/* submenu */
+/* dropdown menu */
 
-.dropdown-submenu{position:relative;}
-.dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
-.dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
-.dropdown-submenu:hover>a:after{border-left-color:#555;}
-.dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
+@media (max-width: 767px) {
+	.navbar-default .navbar-nav .dropdown-menu {
+		/*border-top: 1px solid #eee;*/
+		background-color: #eee;
+	}
+}
+
+/* dropdown submenu */
+
+.dropdown-submenu{	
+	position:relative;
+}
+.dropdown-submenu>.dropdown-menu{
+	top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;
+}
+.dropdown-submenu>a:after{
+	display:block;
+	content:" ";
+	float:right;
+	width:0;
+	height:0;
+	border-color:transparent;
+	border-style:solid;
+}
+@media (min-width: 768px){
+	.dropdown-submenu>a:after{
+		border-width:5px 0 5px 5px;
+		border-left-color:#cccccc;
+		margin-top:5px;
+		margin-right:-10px;
+	}
+	.dropdown-submenu:hover>a:after{
+		border-left-color:#555;
+	}	
+}
+@media (max-width: 767px){
+	.navbar-default .navbar-nav .dropdown-submenu .dropdown-menu{	
+		background-color: #fff;
+	}
+	.dropdown-submenu>a:after{
+		border-width:5px 5px 0 5px;
+		border-top-color:#cccccc;
+		margin-top:5px;
+		margin-right:-5px;
+	}
+	.dropdown-submenu:hover>a:after{
+		border-top-color:#555;
+	}
+}
+
+.dropdown-submenu.pull-left{
+	float:none;
+}
+.dropdown-submenu.pull-left>.dropdown-menu{
+	left:-100%;
+	margin-left:10px;
+	-webkit-border-radius:6px 0 6px 6px;
+	-moz-border-radius:6px 0 6px 6px;
+	border-radius:6px 0 6px 6px;
+}
 
 /* buttons */
 
